feat: fake scanner implements spec v1.2
