# api/openapi.yaml
@@ -10,37 +10,34 @@ info:
 
     The [/scan](#operation/AcceptScanRequest) operation is asynchronous. It should enqueue the job for processing a scan request and return the identifier. This allows Harbor to poll a corresponding scan report with the
     [/scan/{scan_request_id}/report](#operation/GetScanReport) operation. Harbor will call the
-    [/scan/{scan_request_id}/report](#operation/GetScanReport) operation periodically periodically until it returns 200 or 500 status codes.
+    [/scan/{scan_request_id}/report](#operation/GetScanReport) operation periodically until it returns 200 or 500 status codes.
 
     The [/metadata](#operation/GetMetadata) operation allows a Harbor admin to configure and register a scanner
     and discover its capabilities.
 
-    ## Supported consumed MIME types
+    ## Capabilities
 
-    - `application/vnd.oci.image.manifest.v1+json`
-    - `application/vnd.docker.distribution.manifest.v2+json`
+    | Capability Type | Supported consumed MIME types | Supported produced MIME types |
+    | --------------- | ----------------------------- | ----------------------------- |
+    |  vulnerability  | `application/vnd.oci.image.manifest.v1+json`<br>`application/vnd.docker.distribution.manifest.v2+json` | `application/vnd.scanner.adapter.vuln.report.harbor+json; version=1.0`<br>`application/vnd.security.vulnerability.report; version=1.1`<br>`application/vnd.scanner.adapter.vuln.report.raw`|
+    |     sbom        | `application/vnd.oci.image.manifest.v1+json`<br>`application/vnd.docker.distribution.manifest.v2+json` | `application/vnd.security.sbom.report+json; version=1.0` |
 
-    ## Supported produced MIME types
-
-    - `application/vnd.scanner.adapter.vuln.report.harbor+json; version=1.0`
-    - `application/vnd.security.vulnerability.report; version=1.1`
-    - `application/vnd.scanner.adapter.vuln.report.raw`
   contact:
     email: cncf-harbor-maintainers@lists.cncf.io
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-  version: "1.1"
+  version: "1.2"
 servers:
-  - url: /api/v1
+- url: /api/v1
 security:
-  - BasicAuth: []
-  - BearerAuth: []
+- BasicAuth: []
+- BearerAuth: []
 paths:
   /metadata:
     get:
       tags:
-        - Scanner
+      - Scanner
       summary: Get scanner metadata
       description: |
         Used to fetch scanner's metadata and capabilities. The operation is invoked to build an index of scanners
@@ -50,6 +47,9 @@ paths:
         200:
           description: Scanner's metadata and capabilities
           content:
+            "application/vnd.scanner.adapter.metadata+json; version=1.1":
+              schema:
+                $ref: '#/components/schemas/ScannerAdapterMetadata'
             "application/vnd.scanner.adapter.metadata+json; version=1.0":
               schema:
                 $ref: '#/components/schemas/ScannerAdapterMetadata'
@@ -62,7 +62,7 @@ paths:
   /scan:
     post:
       tags:
-        - Scanner
+      - Scanner
       summary: Accept artifact scanning request
       description: |
         A non-blocking operation which enqueues a scan job and returns immediately. It returns a unique
@@ -73,6 +73,9 @@ paths:
           Contains data required to pull the given artifact and save it for scanning in the file system or any other
           location accessible to the scanner.
         content:
+          "application/vnd.scanner.adapter.scan.request+json; version=1.1":
+            schema:
+              $ref: '#/components/schemas/ScanRequest'
           "application/vnd.scanner.adapter.scan.request+json; version=1.0":
             schema:
               $ref: '#/components/schemas/ScanRequest'
@@ -101,10 +104,16 @@ paths:
             "application/vnd.scanner.adapter.error+json; version=1.0":
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+        501:
+          description: The scanner has no capability to handle the scan request
+          content:
+            "application/vnd.scanner.adapter.error+json; version=1.0":
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /scan/{scan_request_id}/report:
     get:
       tags:
-        - Scanner
+      - Scanner
       summary: Get scan report
       description: |
         Get a scan report for the given scan request identifier.
@@ -112,19 +121,28 @@ paths:
         Clients will periodically poll this operation and check `$response.status` until its value equals `200` or `500`.
       operationId: GetScanReport
       parameters:
-        - name: scan_request_id
-          in: path
-          description: The identifier of the corresponding scan request
-          required: true
-          style: simple
-          explode: false
-          schema:
-            $ref: '#/components/schemas/ScanRequestId'
-        - name: Accept
-          in: header
-          schema:
-            type: string
-          example: "application/vnd.security.vulnerability.report; version=1.1"
+      - name: scan_request_id
+        in: path
+        description: The identifier of the corresponding scan request
+        required: true
+        style: simple
+        explode: false
+        schema:
+          $ref: '#/components/schemas/ScanRequestId'
+      - name: Accept
+        in: header
+        schema:
+          type: string
+        example: "application/vnd.security.vulnerability.report; version=1.1"
+      - name: sbom_media_type
+        in: query
+        description: media_type specifies the format of SBOM to be retrieved from the scanner adapter, it should either SPDX SBOM or CycloneDX
+        required: false
+        schema:
+          type: string
+        enum:
+        - application/spdx+json
+        - application/vnd.cyclonedx+json
       responses:
         200:
           description: Scan report
@@ -142,6 +160,9 @@ paths:
                   {
                     "vendor_specific": "vulnerabilities_report"
                   }
+            "application/vnd.security.sbom.report+json; version=1.0":
+              schema:
+                $ref: '#/components/schemas/HarborSbomReport'
         302:
           description: Status indicating the scan report is being generated and the request should be retried.
           headers:
@@ -149,10 +170,23 @@ paths:
               description: Indicates the interval after which the request should be retried.
               schema:
                 type: integer
+        400:
+          description: Bad request from the client to query report of a "/scan" request. For example, querying SBOM generation report, but not passing
+            query parameter (?sbom_media_type=xxx), or the key/value of the query parameter is not valid, it should return 400.
+          content:
+            "application/vnd.scanner.adapter.error+json; version=1.0":
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         404:
           description: Cannot find the corresponding scan request identifier
         500:
           description: Internal server error
+          content:
+            "application/vnd.scanner.adapter.error+json; version=1.0":
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        501:
+          description: The scanner has no capability to handle the mime type
           content:
             "application/vnd.scanner.adapter.error+json; version=1.0":
               schema:
@@ -178,8 +212,8 @@ components:
         Basic scanner properties such as name, vendor, and version.
     ScannerAdapterMetadata:
       required:
-        - scanner
-        - capabilities
+      - scanner
+      - capabilities
       type: object
       properties:
         scanner:
@@ -188,10 +222,39 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/ScannerCapability'
+          example: |
+            [
+             {
+                "type": "vulnerability",
+                "consumes_mime_types": [
+                  "application/vnd.oci.image.manifest.v1+json",
+                  "application/vnd.docker.distribution.manifest.v2+json"
+                ],
+                "produces_mime_types": [
+                  "application/vnd.scanner.adapter.vuln.report.harbor+json; version=1.0"
+                ]
+              },
+              {
+                "type": "sbom",
+                "consumes_mime_types": [
+                  "application/vnd.oci.image.manifest.v1+json",
+                  "application/vnd.docker.distribution.manifest.v2+json"
+                ],
+                "produces_mime_types": [
+                  "application/vnd.security.sbom.report+json; version=1.0"
+                ],
+                "additional_attributes": {
+                  "sbom_media_types": [
+                    "application/spdx+json",
+                    "application/vnd.cyclonedx+json"
+                  ]
+                }
+              }
+            ]
         properties:
           $ref: "#/components/schemas/ScannerProperties"
       description: |
-        Represents metadata of a Scanner Adapter which allows Harbor to lookup a scanner capable
+        Represents metadata of a Scanner Adapter which allows Harbor to lookup a scanner capabilities
         of scanning a given Artifact stored in its registry and making sure that it
         can interpret a returned result.
     ScannerProperties:
@@ -206,6 +269,7 @@ components:
     ScannerCapability:
       description: |
         Capability consists of the set of recognized artifact MIME types and the set of scanner report MIME types.
+
         For example, a scanner capable of analyzing Docker images and producing a vulnerabilities report recognizable
         by Harbor web console might be represented with the following capability:
         - consumes MIME types:
@@ -213,11 +277,29 @@ components:
           - `application/vnd.docker.distribution.manifest.v2+json`
         - produces MIME types:
           - `application/vnd.scanner.adapter.vuln.report.harbor+json; version=1.0`
+
+        For example, a scanner capable of analyzing artifacts and producing a sbom report recognizable
+        by Harbor might be represented with the following capability:
+        - type: sbom
+        - consumes MIME types:
+          - `application/vnd.oci.image.manifest.v1+json`
+          - `application/vnd.docker.distribution.manifest.v2+json`
+        - produces MIME types:
+          - `application/vnd.security.sbom.report+json; version=1.0`
       required:
-        - consumes_mime_types
-        - produces_mime_types
+      - consumes_mime_types
+      - produces_mime_types
       type: object
       properties:
+        type:
+          type: string
+          enum:
+          - vulnerability
+          - sbom
+          description: |
+            The type of the capability, for example, 'vulnerability' represents analyzing the artifact then producing the vulnerabilities report,
+            'sbom' represents generating the corresponding sbom for the artifact which be scanned. In order to the backward and forward compatible,
+            the field is optional, we think it's a original 'vulnerability' scan if no such field.
         consumes_mime_types:
           type: array
           items:
@@ -226,8 +308,8 @@ components:
             The set of MIME types of the artifacts supported by the scanner to produce the reports specified in the "produces_mime_types". A given
             mime type should only be present in one capability item.
           example:
-            - "application/vnd.oci.image.manifest.v1+json"
-            - "application/vnd.docker.distribution.manifest.v2+json"
+          - "application/vnd.oci.image.manifest.v1+json"
+          - "application/vnd.docker.distribution.manifest.v2+json"
         produces_mime_types:
           type: array
           items:
@@ -235,20 +317,67 @@ components:
           description: |
             The set of MIME types of reports generated by the scanner for the consumes_mime_types of the same capability record.
           example:
-            - "application/vnd.scanner.adapter.vuln.report.harbor+json; version=1.0"
+          - "application/vnd.scanner.adapter.vuln.report.harbor+json; version=1.0"
+        additional_attributes:
+          type: object
+          descriptions: The additional attributes for scanner capabilities. If the type is sbom, then it returns supported media types of the SBOM format.
+          example: |
+            {
+              "sbom_media_types": [
+                "application/spdx+json",
+                "application/vnd.cyclonedx+json"
+              ]
+            }
     ScanRequest:
       required:
-        - registry
-        - artifact
+      - registry
+      - artifact
       type: object
       properties:
         registry:
           $ref: '#/components/schemas/Registry'
         artifact:
           $ref: '#/components/schemas/Artifact'
+        enabled_capabilities:
+          type: array
+          description: Enable which capabilities supported by scanner, for backward compatibility, without this field scanner can be considered to enable all capabilities by default.
+          items:
+            type: object
+            required:
+            - type
+            properties:
+              type:
+                type: string
+                enum:
+                - vulnerability
+                - sbom
+                description: The type of the scan capability.
+                example: sbom
+              produces_mime_types:
+                type: array
+                items:
+                  type: string
+                description: |
+                  The set of MIME types of reports generated by the scanner for the consumes_mime_types of the same capability record, it is a subset or fullset of the
+                  produces_mime_types of the capability returned by the metadata API, used for client to fine grained control of the expected report type. It's a optional
+                  field, only applied when client needs to customize it, otherwise the scanner can think it's a fullset as before behavior if without this field.
+                example:
+                - "application/vnd.security.sbom.report+json; version=1.0"
+              parameters:
+                oneOf:
+                  - $ref: '#/components/schemas/SbomParameters'
+                nullable: true
+                description: The additional parameters for the scan request, for the SBOM type, harbor will carry with `sbom_media_types` to specify the expected formats for SBOM content.
+                example: |
+                  {
+                    "sbom_media_types": [
+                      "application/spdx+json",
+                      "application/vnd.cyclonedx+json"
+                    ]
+                  }
     ScanResponse:
       required:
-        - id
+      - id
       properties:
         id:
           $ref: '#/components/schemas/ScanRequestId'
@@ -258,12 +387,23 @@ components:
         identifier is not imposed but it should be unique enough to prevent collisons when polling for scan reports.
       type: string
       example: "3fa85f64-5717-4562-b3fc-2c963f66afa6"
+    SbomParameters:
+      type: object
+      properties:
+        sbom_media_types:
+          type: array
+          items:
+            type: string
+            enum:
+            - application/spdx+json
+            - application/vnd.cyclonedx+json
     Registry:
       type: object
       properties:
         url:
           type: string
           description: A base URL or the Docker Registry v2 API.
+          format: url
           example: https://core.harbor.domain
         authorization:
           type: string
@@ -349,7 +489,7 @@ components:
             The list of links to the upstream databases with the full description of the vulnerability.
           format: uri
           example:
-            - https://security-tracker.debian.org/tracker/CVE-2017-8283
+          - https://security-tracker.debian.org/tracker/CVE-2017-8283
         preferred_cvss:
           $ref: "#/components/schemas/CVSSDetails"
         cwe_ids:
@@ -357,7 +497,7 @@ components:
           items:
             type: string
           example:
-            - CWE-476
+          - CWE-476
           description: |
             The Common Weakness Enumeration Identifiers associated with this vulnerability.
         vendor_attributes:
@@ -382,12 +522,37 @@ components:
           remote root privilege escalations, or massive data loss.
       example: Low
       enum:
-        - Unknown
-        - Negligible
-        - Low
-        - Medium
-        - High
-        - Critical
+      - Unknown
+      - Negligible
+      - Low
+      - Medium
+      - High
+      - Critical
+    HarborSbomReport:
+      type: object
+      properties:
+        generated_at:
+          type: string
+          format: 'date-time'
+          description: 'The time of the report generated.'
+        artifact:
+          $ref: '#/components/schemas/Artifact'
+        scanner:
+          $ref: '#/components/schemas/Scanner'
+        vendor_attributes:
+          type: object
+          additionalProperties: true
+          description: 'The additional attributes of the vendor.'
+        media_type:
+          type: string
+          enum:
+          - application/spdx+json
+          - application/vnd.cyclonedx+json
+          description: 'The format of the sbom data.'
+        sbom:
+          type: object
+          additionalProperties: true
+          description: 'The raw data of the sbom generated by the scanner.'
     ErrorResponse:
       type: object
       properties:
